Improved create/edit of connections, added connect & disconnect buttons and reviewed adapter structure

--- a/src/app/component/form/input-text-required/input-text-required.html
+++ b/src/app/component/form/input-text-required/input-text-required.html
@@ -1,6 +1,6 @@
 <mat-form-field class="main-layout">
   <mat-label>{{label}}</mat-label>
-  <input matInput type="text" [formControl]="formControl" [errorStateMatcher]="matcher" class="component-layout">
+  <input matInput [type]="type" [formControl]="formControl" [errorStateMatcher]="matcher" class="component-layout">
   <button *ngIf="formControl.value" matSuffix mat-icon-button (click)="onClear()" [disabled]="disabled">
     <mat-icon>close</mat-icon>
   </button>
