--- a/src/app/component/form/select-required/select-text-required.html
+++ b/src/app/component/form/select-required/select-text-required.html
@@ -1,6 +1,6 @@
 <mat-form-field class="main-layout">
 	<mat-label>{{label}}</mat-label>
-	<mat-select [formControl]="formControl" [errorStateMatcher]="matcher" required class="component-layout">
+	<mat-select [formControl]="formControl" [errorStateMatcher]="matcher" required class="component-layout" [disabled]="disabled">
 		<mat-option *ngFor="let item of list" [value]="item[keyField]">{{item[valueField]}}</mat-option>
     <mat-option *ngFor="let key  of mapKeys()" [value]="key">{{mapValue(key)}}</mat-option>
 	</mat-select>
