--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter/parameter.dialog.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/filtering/optimize/parameter/parameter.dialog.scss
@@ -31,7 +31,14 @@ table tr td  {
 //=============================================================================
 
 .field-to-optimize {
-  width: 300px;
+  width: 49%;
+  margin-left: 8px;
+}
+
+//=============================================================================
+
+.dialog-style {
+  min-height: 750px;
 }
 
 //=============================================================================
