Many things: - Added "delete" button for trading systems - Fixed filtering bug on flextable - Refactored code to add genetic optimization

--- a/src/app/layout/main-panel/work-panel/inventory/trading-system/trading-system.panel.html
+++ b/src/app/layout/main-panel/work-panel/inventory/trading-system/trading-system.panel.html
@@ -5,6 +5,7 @@
     <button mat-button (click)="onCreateClick()" [disabled]="disCreate">{{button("create")}}</button>
     <button mat-button (click)="onViewClick()"   [disabled]="disView">{{button("view")}}</button>
     <button mat-button (click)="onEditClick()"   [disabled]="disEdit">{{button("edit")}}</button>
+    <button mat-button (click)="onDeleteClick()" [disabled]="disDelete">{{button("delete")}}</button>
   </div>
 
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
