--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.scss
@@ -46,9 +46,69 @@
 
 //=============================================================================
 
+.buttons-layout {
+  display        : flex;
+  flex-direction : row;
+  justify-content: flex-start;
+  gap            : 8px;
+  align-items    : baseline;
+}
+
+//=============================================================================
+
 .chart-layout {
   width:  400px;
   height: 200px;
+}
+
+//=============================================================================
+
+.info-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  gap     : 8px;
+  overflow: hidden;
+}
+
+//=============================================================================
+
+.table-layout {
+  font-size: smaller;
+  flex: 1 1 auto;
+}
+
+//=============================================================================
+
+.value-style {
+  text-align: right;
+  font-weight: bold;
+}
+
+//=============================================================================
+
+mat-card-actions check-button {
+  margin-right: 8px;
+}
+
+//=============================================================================
+
+.status {
+  width:     28px;
+  height:    28px;
+  font-size: 28px;
+}
+
+//=============================================================================
+//=== Icons for market types
+//=============================================================================
+
+.marketType {
+  width:     64px;
+  height:    40px;
+  font-size: 40px;
+  color:     #808080;
 }
 
 //=============================================================================
