--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,8 +24,11 @@ body {
   height     : 100%;
   margin     : 0;
   background-color: #F0FaFF;
+  font-family: 'Roboto', sans-serif;
+
   --mat-toolbar-standard-height: 48px;
   --mat-table-row-item-container-height: 40px;
+  --mat-card-subtitle-text-color: #A0A0A0;
 }
 
 //=============================================================================
