--- a/src/app/layout/main-panel/work-panel/admin/connection/create/create.panel.scss
+++ b/src/app/layout/main-panel/work-panel/admin/connection/create/create.panel.scss
@@ -33,7 +33,7 @@
 
 //=============================================================================
 
-input-text-required, select-text-required {
+input-text-required, select-required {
   width: 100%;
 }
 
