--- a/src/app/layout/main-panel/work-panel/admin/connection/edit/edit.panel.html
+++ b/src/app/layout/main-panel/work-panel/admin/connection/edit/edit.panel.html
@@ -4,8 +4,8 @@
   <div class="form-layout">
     <input-text-required [(value)]="conn.code" [label]="loc('code')" [len]="8" [disabled]="true"></input-text-required>
     <input-text-required #connNameCtrl [(value)]="conn.name" [label]="loc('name')" [len]="32"></input-text-required>
-    <select-text-required [(key)]="conn.systemCode" [label]="loc('system')" [disabled]="true"
-                          keyField="code" valueField="name" [list]="adapters"></select-text-required>
+    <select-required [(key)]="conn.systemCode" [label]="loc('system')" [disabled]="true"
+                          keyField="code" valueField="name" [list]="adapters"></select-required>
 
     <ng-container *ngFor="let param of params">
       <input-text-required *ngIf="param.type=='string'"   [(value)]="param.valueStr" label="{{label(param.name)}}" [len]="param.maxValue"></input-text-required>
