--- a/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-broker/create/product-broker.create.html
@@ -2,11 +2,11 @@
   <right-title-panel icon="currency_exchange" title="{{loc('new')}}" (onClose)="onClose()"></right-title-panel>
 
   <div class="form-layout">
-    <select-text-required  #pbConnCtrl keyField="id" valueField="name"
+    <select-required  #pbConnCtrl keyField="id" valueField="name"
                            [label]="mod('connectionCode')"
                            [(key)]  ="pb.connectionId"
                            [list]="connections"
-                           (keyChange)="onConnectionChange($event)"></select-text-required><br/>
+                           (keyChange)="onConnectionChange($event)"></select-required><br/>
     <br/>
     <div *ngIf="status == Status.Local">
       <input-text-required   #pbSymbolCtrl       [label]="mod('symbol')"           [(value)]="pb.symbol"           [len]="16"></input-text-required><br/>
@@ -15,9 +15,9 @@
       <input-number-required #pbCostPerOperCtrl  [label]="mod('costPerOperation')" [(value)]="pb.costPerOperation" [min]="0"></input-number-required><br/>
       <input-number-required #pbMarginValueCtrl  [label]="mod('marginValue')"      [(value)]="pb.marginValue"      [min]="0"></input-number-required><br/>
       <input-number-required #pbIncrementCtrl    [label]="mod('increment')"        [(value)]="pb.increment"        [min]="0.00000001" [max]="1"></input-number-required><br/>
-      <select-text-required  #pbMarketCtrl       [label]="mod('marketType')"       [(key)]  ="pb.marketType"       [map]="markets"></select-text-required><br/>
-      <select-text-required  #pbProductCtrl      [label]="mod('productType')"      [(key)]  ="pb.productType"      [map]="products"></select-text-required><br/>
-      <select-text-required  #pbExchangeCtrl     [label]="mod('exchangeCode')"     [(key)]  ="pb.exchangeId"       keyField="id" valueField="code" [list]="exchanges"></select-text-required>
+      <select-required       #pbMarketCtrl       [label]="mod('marketType')"       [(key)]  ="pb.marketType"       [map]="markets"></select-required><br/>
+      <select-required       #pbProductCtrl      [label]="mod('productType')"      [(key)]  ="pb.productType"      [map]="products"></select-required><br/>
+      <select-required       #pbExchangeCtrl     [label]="mod('exchangeCode')"     [(key)]  ="pb.exchangeId"       keyField="id" valueField="code" [list]="exchanges"></select-required>
     </div>
   </div>
 
