--- a/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/create/product-data.create.scss
@@ -33,7 +33,7 @@
 
 //=============================================================================
 
-input-text-required, select-text-required {
+input-text-required, select-required {
   width: 100%;
 }
 
