--- a/src/app/layout/main-panel/work-panel/inventory/product-data/edit/product-data.edit.html
+++ b/src/app/layout/main-panel/work-panel/inventory/product-data/edit/product-data.edit.html
@@ -3,8 +3,8 @@
 
   <div class="form-layout">
     <input-text-required   #pdNameCtrl     [label]="mod('name')"        [(value)]="pd.name"        [len]="64"></input-text-required><br/>
-    <select-text-required  #pdMarketCtrl   [label]="mod('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-text-required><br/>
-    <select-text-required  #pdProductCtrl  [label]="mod('productType')" [(key)]  ="pd.productType" [map]="products"></select-text-required><br/>
+    <select-required       #pdMarketCtrl   [label]="mod('marketType')"  [(key)]  ="pd.marketType"  [map]="markets"></select-required><br/>
+    <select-required       #pdProductCtrl  [label]="mod('productType')" [(key)]  ="pd.productType" [map]="products"></select-required><br/>
   </div>
 
   <div class="buttons-layout">
