--- a/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.scss
+++ b/src/app/layout/main-panel/work-panel/inventory/trading-system/edit/edit.panel.scss
@@ -33,7 +33,7 @@
 
 //=============================================================================
 
-input-text-required, select-text-required, input-number-required {
+input-text-required, select-required, input-number-required, chip-set-text, input-text-optional, select-optional {
   width: 100%;
 }
 
