--- a/src/app/layout/main-panel/work-panel/tool/bias-analysis/edit/bias-analysis.edit.scss
+++ b/src/app/layout/main-panel/work-panel/tool/bias-analysis/edit/bias-analysis.edit.scss
@@ -39,7 +39,7 @@
 
 //=============================================================================
 
-input-text-required, instrument-selector, select-text-required {
+input-text-required, instrument-selector, select-required {
   width: 100%;
 }
 
